@@ -1,3 +1,5 @@
+* Optimize prefiltering in client_api() avoding extra processing if `parts[1]` matches are undefined and allow filtering of selectors containing `:not` again. [jddalton]
+
 * Refine `Optimize.tagName` to match more tagName selectors. [jddalton]
 
 * Ensure native_api() returns an array of results for className selectors instead of nodeLists. [jddalton]
